[project]
name = "latent-viewer"
version = "0.1.0"
description = "An interactive 3D viewer for inspecting image embeddings"
readme = "README.md"
authors = [
    { name = "Leon Boschman", email = "leon.boschman@chalmers.se" }
]
requires-python = ">=3.8"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=1.6.0",
    "h5py>=3.11.0",
    "loguru>=0.7.3",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "plotly>=6.0.1",
    "scikit-activeml>=0.2.2",
    "scikit-learn>=1.3.2",
]

[project.scripts]
latent-viewer = "latent_viewer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
